--- a/style.css
+++ b/style.css
@@ -115,6 +115,35 @@ nav ul li:hover {
 #items img {
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
 }
+#carousel {
+  position: relative;
+}
+#carousel #text {
+  position: absolute;
+  top: 120px;
+  left: 40px;
+  max-width: 350px;
+  font-family: Georgia;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 56px;
+  line-height: 64px;
+  color: #ffffff;
+  text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.7);
+}
+#carousel #text button {
+  background: #5792d0;
+  border: 2px solid #ffffff;
+  box-sizing: border-box;
+  color: white;
+  font-family: Helvetica;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 18px;
+  padding: 8px 16px;
+  margin-top: 32px;
+}
 #offers {
   background-image: url("images/offers-bg.png");
   width: 100%;
